--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <meta http-equiv="refresh" content="0; url='https://raw.githubusercontent.com/gparrello/dotfiles/master/start'" />
+    <link rel="canonical" href="https://raw.githubusercontent.com/gparrello/dotfiles/master/start" /> 
   </head>
   <body>
     <p>Please follow <a href="https://raw.githubusercontent.com/gparrello/dotfiles/master/start">this link</a>.</p>
